--- a/XoopsCore/branches/tasks/123542-admin/docs/changelog.txt
+++ b/XoopsCore/branches/tasks/123542-admin/docs/changelog.txt
@@ -1,7 +1,8 @@
 XOOPS 2 changelog
 
+
 ============================
-2006/01/xx: Version 2.3.0-alpha2
+2006/xx/xx: Version 2.3.0-alpha2
 ============================
 - Componentized and cleaned up the architectural services: error handler,logger,db,http,session and auth (skalpa)
 - Fixed activation/deactivation of the error handler (skalpa)
